# cryptosurferator

./: Cargo.toml  README.md  notes.md  todo.md
src/: basic.rs  grammar.rs  main.rs
src/data/: 1inch.csv
src/lib/: Operand.rs  TerminalType.rs  mod.rs  terminal_type.rs  ticker_store.rs
src/lib/Operation/: Branch.rs  Constant.rs  Index.rs  MarketData.rs  Number.rs  Trade.rs  boolean.rs  market_data.rs  market_sort.rs  mod.rs  num_pick.rs
src/lib/op/: mod.rs  operand.rs  terminal_type.rs  ticker_store.rs
src/lib/op/environment/: mod.rs
src/lib/op/operation/: boolean.rs  branch.rs  constant.rs  index.rs  market_data.rs  market_sort.rs  mod.rs  num_pick.rs  number.rs  trade.rs
src/lib/operation/: boolean.rs  num_pick.rs
