[package]
name = "cryptosurferator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.8.0"
barter = "0.7.2"
barter-data = "0.3.2"
csv = "1.1"
chrono = "0.4"
lerp = { version = "0.4", features = ["derive"] }
